--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Lato:wght@100;400&family=Montserrat:ital,wght@0,100;0,200;0,300;1,100;1,200&family=Orbitron:wght@900&family=Work+Sans:wght@100;500;700&display=swap" rel="stylesheet">
 
     <link href="//db.onlinewebfonts.com/c/0ab9d57ed3810a45a66c42d34995e281?family=Im+Spiegelland" rel="stylesheet" type="text/css"/>
+
+    <script
+    type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+  ></script>
+
     <title>Prueba React Dcorp</title>
   </head>
   <body>
